Fixed some css layout bugs

--- a/src/styles/partials/editModal.scss
+++ b/src/styles/partials/editModal.scss
@@ -4,7 +4,8 @@
 .edit {
   z-index: 20;
   position: absolute;
-  top: 50%;
+  top: 50vh;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 50%;
 }
