--- a/src/styles/partials/general.scss
+++ b/src/styles/partials/general.scss
@@ -66,3 +66,7 @@ body {
 .mt-1 {
   margin-top: 2em;
 }
+
+.mb {
+  margin-bottom: 1em;
+}
